<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"

          android:layout_width="match_parent"
          android:layout_height="match_parent"
                                             tools:context=".UI.Activities.RecipeDetailFragment">



    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipe_detail">


    <FrameLayout
        android:id="@+id/exo_thumb_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/player_view_dimen"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/step_thumbnail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/thumbnail_image"
            android:src="@drawable/ic_insert_photo_black_48dp"/>

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exo_player_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/exo_thumb_frame_layout">

        <TextView
        android:id="@+id/step_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/steps"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/step_desc_textview"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/step_description"
        app:layout_constraintBottom_toTopOf="@+id/previous_imageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_text_view"
        tools:text="@string/step_description"/>

        <ImageButton
            android:id="@+id/previous_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="9dp"
            android:background="@color/colorBackgroundWhite"
            android:onClick="previousStep"
            android:contentDescription="@string/previous_btn"
            android:src="@drawable/ic_keyboard_arrow_left_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_desc_textview"/>

    <TextView
        android:id="@+id/step_text"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:text="@string/steps"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/step_desc_textview"/>

        <ImageButton
            android:id="@+id/next_imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorBackgroundWhite"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/step_desc_textview"/>
    </android.support.constraint.ConstraintLayout>



    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>