<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    tools:context=".UI.Activities.RecipeActivity">

    <TextView
        android:id="@+id/recipe_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:text="@string/recipes_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="@dimen/textsize_24sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/recipes_title"/>

    <FrameLayout
        android:id="@+id/recipe_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipe_textView">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recipes_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="true"
            android:clipToPadding="true"
            tools:listitem="@layout/list_recipe_item"/>

        <RelativeLayout
            android:id="@+id/empty_recipe_info_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_16dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_mood_bad_black_48dp"
                android:scaleType="fitXY"
                android:id="@+id/no_data_imageview"
                android:contentDescription="@string/bad_mood"/>

            <TextView
                android:id="@+id/error_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text= "@string/error_info_txt"
                android:textColor="@color/colorText"
                android:layout_below="@+id/no_data_imageview"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/textsize_18sp"/>


        </RelativeLayout>


        <ProgressBar
            android:id="@+id/recipe_progressbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"/>
    </FrameLayout>


</android.support.constraint.ConstraintLayout>